# Robot-mobile-autonome-sous-ROS-2

./: README.md
arduino_firmware/: motor_controller.ino
ros2_ws_embarque/src/robot_autopilot/: autopilot_forward_once.py  autopilot_mission.py  autopilot_serial.py  package.xml  setup.py
ros2_ws_simulation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws_simulation/install/my_robot_description/lib/my_robot_description/: obstacle_avoidance.py  simple_delivery.py
ros2_ws_simulation/install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws_simulation/install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
ros2_ws_simulation/install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws_simulation/install/my_robot_description/share/my_robot_description/launch/: gazebo.launch.py
ros2_ws_simulation/install/my_robot_description/share/my_robot_description/urdf/: my_robot.urdf
ros2_ws_simulation/log/: latest_build
ros2_ws_simulation/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws_simulation/src/my_robot_description/launch/: gazebo.launch.py
ros2_ws_simulation/src/my_robot_description/src/: obstacle_avoidance.py  simple_delivery.py
ros2_ws_simulation/src/my_robot_description/urdf/: my_robot.urdf
(+2 files in other folders)
